Novedades y mejoras en el back
- Se han reducido bugs y malos olores
- Se ha añadido un nuevo método en el servicio de autenticación para comprobar si el token ha caducado o no